--- a/app/src/main/res/layout/fragment_enter.xml
+++ b/app/src/main/res/layout/fragment_enter.xml
@@ -13,7 +13,24 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
+        android:tint="@color/white"
         android:src="@drawable/ic_baseline_exit_to_app_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.348" /><![CDATA[
+
+
+    />
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
