--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,7 +60,7 @@
             android:minHeight="30dp"
             android:ems="10"
             android:hint="Введите пароль"
-            android:inputType="textPersonName" />
+            android:inputType="textPassword" />
 
     </TableRow>
 
