--- a/app/src/main/res/layout/fragment_enter.xml
+++ b/app/src/main/res/layout/fragment_enter.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".enterFragment">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/exitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:tint="@color/white"
-        android:src="@drawable/ic_baseline_exit_to_app_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
@@ -28,9 +16,6 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348" /><![CDATA[
+        app:layout_constraintVertical_bias="0.348" />
 
-
-    />
-]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
