--- a/app/src/main/res/menu/exit_menu.xml
+++ b/app/src/main/res/menu/exit_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<!--        some comment-->
     <item android:title="Сменить аккаунт"
         app:showAsAction="never"
         android:id="@+id/changeAccount"/>
