--- a/app/src/main/res/layout/fragment_enter.xml
+++ b/app/src/main/res/layout/fragment_enter.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".enterFragment">
 
-
+<!--some comment-->
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
