--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,7 @@
     tools:context=".LoginFragment">
 
 
+    <!--some comment-->
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
             android:gravity="center"
             />
     </TableRow>
+    <!--some comment-->
 
     <TableRow
         android:layout_width="wrap_content"
@@ -46,6 +48,7 @@
             android:inputType="textEmailAddress" />
     </TableRow>
 
+    <!--some comment-->
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +68,7 @@
 
     </TableRow>
 
+    <!--some comment-->
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -82,6 +86,7 @@
             android:minHeight="65dp"/>
     </TableRow>
 
+    <!--some comment-->
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,9 +105,7 @@
 
     </TableRow>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--some comment-->
 
 
 </TableLayout>
